...
            style={{
              width: 48,
              height: 48,
            }}
          />
          <Pressable style={styles.button} onPress={openCreateLogForm}>
            <Text style={styles.buttonText}>Add</Text>
          </Pressable>
        </View>

        <FlatList
          refreshControl={
            <RefreshControl
...
                  addLogToDatabase();
                  resetForm();
                  closeCreateLogForm();
                  readLogsFromDatabase();
                }}
              >
                <Text style={styles.buttonText}>Confirm</Text>
              </Pressable>
              <Pressable
                style={styles.secondaryButton}
                onPress={() => {
                  resetForm();
                  closeCreateLogForm();
...
