appId: com.abhishandy.dlog
---
- openLink: exp://192.168.1.11:8081
- tapOn: "Add"
- tapOn: "content"
- inputRandomText
- tapOn: "Confirm"
- swipe:
    start: 50%, 20%
    end: 50%, 80%
